# HabitTree

./: .gitignore  DESIGN.md  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  turbo.json
.claude/: settings.local.json
apps/backend/: .env.example  main.py  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 644c3899fa3e_add_operations.py  bc1ce0de3578_initial_schema.py  c8f7a2b1d3e5_add_users_and_auth.py
apps/backend/app/: auth.py  config.py  dependencies.py
apps/backend/app/models/: __init__.py  bio.py  food.py  fuel.py  mission.py  operation.py  user.py  weight.py
apps/backend/app/routers/: bio.py  food.py  fuel.py  missions.py  operations.py  protocols.py  webhooks.py  weight.py
apps/backend/app/schemas/: bio.py  food.py  fuel.py  mission.py  operation.py  weight.py
apps/mobile/: app.json  metro.config.js  package-lock.json  package.json  tailwind.config.js
apps/mobile/app/: _layout.tsx
apps/mobile/app/auth/: _layout.tsx  sign-in.tsx  sign-up.tsx
apps/mobile/app/tabs/: _layout.tsx
apps/mobile/constants/: theme.ts
apps/mobile/src/theme/: index.ts
apps/webapp/: index.html  package-lock.json  package.json  vite.config.ts
apps/webapp/src/: index.css  main.tsx
apps/webapp/src/app/: auth-guard.tsx  bottom-nav.tsx  header.tsx  layout-store.ts  layout.tsx  providers.tsx  sidebar.tsx
apps/webapp/src/features/auth/: sign-in-page.tsx
apps/webapp/src/routes/: index.tsx
apps/webapp/src/shared/: api-context.tsx  confirm-dialog.tsx  date-utils.ts  modal.tsx
(+54 files in other folders)
